submissions/thunderpussy1/popup/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    --bg-color-header: pink;
    --bg-color-body: rgb(224, 56, 84);
    --bg-color-nav:purple;
    --color-nav: white;
    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
}
.body {
    background:var(--bg-color-body);
}
.header {
    display: block;
    margin: 0 auto;
}
.header__nav_box{
    display: flex;
    list-style: none;
    align-items: center;
    justify-content: space-between;
    max-width: 30rem;
    margin: 0 auto; 
}
.header__nav_box_item {
    display: flex;
    align-items: center;
    border: 2px solid black;
    font-size: 1.5rem;
    height: 3.8rem;
    padding: 0 0.5rem;
    background: var(--bg-color-header);
}
.header__nav_box_item_link,
.popup__box_item_link,
.popup__box_item {
    display: flex;
    color: inherit;
    text-decoration: none;
}
.popup__box_item_link {
background:var(--bg-color-nav);
color: var(--color-nav);
}
.popup_label_img {
    display: flex;
}
.header__nav_box_item_img,
.popup_label_img {
    width: 2.2rem;
}
.header__nav_box_item_popup,
.popup__btn_more {
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    position: relative;
}
.popup {
    display: none; 
    flex-direction: column;
    align-items: center;
    position: absolute;
    top: 4rem;
    left: -8.5rem;
    width: 20.5rem;
    overflow-y: auto;
    max-height: 24rem;
}

/* popup logic */

.header__nav_box_item_popup:checked ~ .popup {
    display: flex;
}
.popup__btn_more:checked ~ .popup__more {
    display: flex;
}
.popup__btn_more:checked ~ .popup_btn_label {
    display: none;
}

.popup__box {
    display: flex;
    justify-content: space-evenly;
    flex-wrap: wrap;
}
.popup__more {
    display: none;
    justify-content: space-evenly;
    flex-wrap: wrap;
}
.popup__box_item {
    padding: 3px;
}
.popup__box_item__img {
    width: 2rem;
}
.popup__box_item_link {
    display: grid;
    justify-items: center;
    flex-direction: column;
    grid-template-rows: 70% 30%;
    align-items: center;
    width: 6rem;
    height: 5rem;
    border: 1.7px solid black;
    padding: 3px;
}
.popup__box_item_text {
    font-size: 1rem;
}
.popup_btn_label {
    text-align: center;
    width: 100%;
    padding: 0.3rem 0;
    background: var(--bg-color-header);
    border-radius: 0.4rem;
}
.popup__box_item_link_k {
    color: inherit;
    text-decoration: none;
    font-size: 1rem;
    width: 100%;
    background: var(--bg-color-header);
}
.btn_kottans {
    width: 100%;
    text-align: center;
    padding-bottom: 5px;
}
.header__nav_box_item:focus, 
.header__nav_box_item:hover, 
.popup__box_item_link:hover,
.popup__box_item_link:focus, 
.header__nav_box_item_popup:hover + .popup_label, 
.popup_btn_label:hover, 
.popup__btn_more:focus + .popup_btn_label,
.popup__box_item_link_k:hover,
.popup__box_item_link_k:focus {
  outline: 0.18rem solid white;
  border-radius: 0.4rem;
}
@media (max-width: 768px) {
    * {
        font-size: 14px;
    }
}
@media (max-width: 425px) {
    * {
        font-size: 12px;
    }
}

